# RTAPP

./: README.md
app/: CMakeLists.txt  app_test
app/include/: shader.h
app/include/glad/: glad.h
app/raytracer/: hittable.h  interval.h  rt_engine.cpp  rt_engine.h  sphere.h  test.ppm  test_main.cpp  test_rt  vec3.h
app/src/: glad.c  main.cpp  opengl_sphere.h  preview.frag
raytracer/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  ray.h  raytracer  rtweekend.h  sphere.h  vec3.h
